# IPSAE

./: LICENSE  MANIFEST.in  README.md  Usage  ipsae.py  pyproject.toml
Example/: RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15.pml  RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15.txt  RAF1_KSR1_MEK1_9f755_unrelaxed_alphafold2_multimer_v3_model_1_seed_000_15_15_byres.txt  Readme.md  fold_aurka_0_tpx2_0_full_data_0.json  fold_aurka_0_tpx2_0_model_0.cif  fold_aurka_0_tpx2_0_model_0_10_10.pml  fold_aurka_0_tpx2_0_model_0_10_10.txt  fold_aurka_0_tpx2_0_model_0_10_10_byres.txt
src/ipsae/: __init__.py  cli.py  core.py
src/ipsae.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
