[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipsae"
version = "1.0.0"
description = "Calculate ipSAE scores for protein-protein interactions in AlphaFold2 and AlphaFold3 models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "SameeUllah", email = "sameeullah@bs.qau.edu.pk"},
]
keywords = ["protein", "alphafold", "bioinformatics", "structural-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/yourusername/ipsae"
Repository = "https://github.com/yourusername/ipsae.git"
Issues = "https://github.com/yourusername/ipsae/issues"

[project.scripts]
ipsae = "ipsae.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
